--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,8 @@ jobs:
       - checkout
       - setup_remote_docker
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run: docker build -t mozilla/send:latest .
-      - run: docker push mozilla/send:latest
+      - run: docker build -t broadwing/send:latest .
+      - run: docker push broadwing/send:latest
   deploy_vnext:
     docker:
       - image: circleci/node:12
@@ -35,8 +35,8 @@ jobs:
       - checkout
       - setup_remote_docker
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run: docker build -t mozilla/send:vnext .
-      - run: docker push mozilla/send:vnext
+      - run: docker build -t broadwing/send:vnext .
+      - run: docker push broadwing/send:vnext
   deploy_stage:
     docker:
       - image: circleci/node:12
@@ -44,8 +44,8 @@ jobs:
       - checkout
       - setup_remote_docker
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run: docker build -t mozilla/send:$CIRCLE_TAG .
-      - run: docker push mozilla/send:$CIRCLE_TAG
+      - run: docker build -t broadwing/send:$CIRCLE_TAG .
+      - run: docker push broadwing/send:$CIRCLE_TAG
 workflows:
   version: 2
   test_pr:
