--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run: docker login -u "${DOCKER_USER}" --p "${DOCKER_PASS}"
+      - run: docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}"
       - run: docker build -t broadwing/send:latest .
       - run: docker push broadwing/send:latest
   deploy_vnext:
@@ -34,7 +34,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run: docker login -u "${DOCKER_USER}" --p "${DOCKER_PASS}"
+      - run: docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}"
       - run: docker build -t broadwing/send:vnext .
       - run: docker push broadwing/send:vnext
   deploy_stage:
@@ -43,7 +43,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run: docker login -u "${DOCKER_USER}" --p "${DOCKER_PASS}"
+      - run: docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}"
       - run: docker build -t broadwing/send:$CIRCLE_TAG .
       - run: docker push broadwing/send:$CIRCLE_TAG
 workflows:
